# readthedocs-demo

./: .readthedocs.yaml  README.md  mkdocs.yaml  pyproject.toml
docs/: index.md
