[tool.poetry]
name = "readthedocs-demo"
version = "0.1.0"
description = ""
authors = ["Vitor Oliveira <vitor.oliveira@tmx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.25"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
